// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple query no comma support 1`] = `
Array [
  Object {
    "name": "$root",
    "props": Array [
      Object {
        "field": "member",
        "name": "honourMember",
      },
      Object {
        "name": "payerStatus",
      },
    ],
    "type": Object {
      "name": "Member",
    },
  },
  Object {
    "name": "foo",
    "type": Object {
      "name": "All",
    },
  },
  Object {
    "name": "clause",
    "type": Object {
      "name": "Fengdie",
      "param": Array [
        Object {
          "key": "path",
          "value": "insmutual_clause",
        },
        Object {
          "key": "base",
          "value": "$foo",
        },
      ],
    },
  },
  Object {
    "name": "latest",
    "type": Object {
      "name": "Fengdie",
      "param": Array [
        Object {
          "key": "insxhbbff_old_upgrade",
        },
      ],
    },
  },
]
`;

exports[`simple query ok 1`] = `
Array [
  Object {
    "name": "$root",
    "props": Array [
      Object {
        "field": "member",
        "name": "honourMember",
      },
      Object {
        "name": "payerStatus",
      },
    ],
    "type": Object {
      "name": "Member",
    },
  },
  Object {
    "name": "foo",
    "type": Object {
      "name": "All",
    },
  },
  Object {
    "name": "clause",
    "type": Object {
      "name": "Fengdie",
      "param": Array [
        Object {
          "key": "path",
          "value": "insmutual_clause",
        },
        Object {
          "key": "base",
          "value": "$foo",
        },
      ],
    },
  },
  Object {
    "name": "latest",
    "type": Object {
      "name": "Fengdie",
      "param": Array [
        Object {
          "key": "insxhbbff_old_upgrade",
        },
      ],
    },
  },
]
`;

exports[`simple query old patten 1`] = `
Array [
  Object {
    "name": "root",
    "props": Array [
      Object {
        "name": "honourMember",
      },
      Object {
        "name": "payerStatus",
      },
    ],
    "type": Object {
      "name": "Member",
    },
  },
  Object {
    "name": "foo",
    "type": Object {
      "name": "All",
    },
  },
  Object {
    "name": "clause",
    "props": Array [
      Object {
        "field": "insmutual_clause",
        "name": "clause",
      },
      Object {
        "field": "insxhbbff_old_upgrade",
        "name": "latest",
      },
    ],
    "type": Object {
      "name": "Fengdie",
    },
  },
]
`;
